# Agent

./: CMakeLists.txt  INSTALL_CMAKE.md  README.md  WINDOWS_GUIDE.md  WINDOWS_INSTALL.md  ai_model.py  autotuner.py  build_professional_installer.bat  config_manager.py  downloader.py  gpu_worker.py  gui.py  hashing.py  health_check.py  install_windows.bat  main.py  miner.py  miner_logger.py  profit_manager.py  requirements.txt  run_miner.bat  setup_script.iss  stratum.py  stratum_v2.py  sv2_noise.py  sv2_protocol.py  test_frontend.py  test_gui.py  test_sv2.py  tests.py  train_ai.py  worker.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/miner/: ai-log-terminal.jsx  config-panel.jsx  performance-charts.jsx  stat-cards.jsx
src-rust/: Cargo.toml
src-rust/src/: health.rs  main.rs  miner.rs
static/: script.js  style.css
templates/: index.html
