[package]
name = "ai_monero_miner"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
